####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = assignment4

## INCLUDES were found outside kdevelop specific part

assignment4_SOURCES = main.cpp 
assignment4_LDADD   =  -lm


EXTRA_DIST = main.cpp tools.h signal_handler.h 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
assignment4_LDFLAGS = $(all_libraries) 
                                                                                
